--- a/GroupProject-Annie's garden/FrontEnd/diy-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/diy-index.html
@@ -60,12 +60,12 @@
         }
 
         .extraPage_diy_banner .banner_decorationBox {
-            width: 933px;
+            width: 70%;
             height: 138px;
             background-color: rgba(255, 255, 255, 0.63);
 
             position: absolute;
-            right: 0;
+            left: 0;
             top: 319px;
 
         }
@@ -349,7 +349,7 @@
         @media (max-width:1000px) {
 
             .extraPage_diy_banner .banner_decorationBox {
-                width: 433px;
+                width: 70%;
                 height: 100px;
             }
 
@@ -426,7 +426,7 @@
             }
 
             .extraPage_diy_banner .banner_decorationBox {
-                width: 297px;
+                width: 70%;
                 height: 44.09px;
                 top: 119px;
 
@@ -535,7 +535,7 @@
                         <a href="./pancake-index.html" class="changeSite1 ">鬆餅小屋</a>
                     </li>
                     <li class="diyPage">
-                        <a href="./diy-index.html" class="changeSite2 ">手作diy</a>
+                        <a href="./diy-index.html" class="changeSite2 ">手作DIY</a>
                     </li>
                     <li class="princessPage">
                         <a href="./princess-index.html" class="changeSite3 ">公主故事屋</a>
@@ -562,7 +562,7 @@
     <div class="extraPage_diy page">
         <div class="extraPage_diy_banner">
             <div class="banner_decorationBox">
-                <div class="banner_text">手做DIY</div>
+                <div class="banner_text">手作DIY</div>
             </div>
         </div>
         <div class="extraPage_diy_container">
