--- a/GroupProject-Annie's garden/FrontEnd/guide-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/guide-index.html
@@ -75,7 +75,7 @@
         }
 
         .page_3_banner .banner_decorationBox {
-            width: 933px;
+            width: 70;
             height: 138px;
             background-color: rgba(255, 255, 255, 0.63);
             /* transform: translate(988px,319px); */
@@ -565,7 +565,7 @@
         } */
             .trigger_imgBox1 {
                 width: 241px;
-                height: 355px;
+                height: 241px;
                 top: -34px;
                 left: 299px;
             }
@@ -573,7 +573,7 @@
             .trigger_imgBox2 {
                 position: absolute;
                 width: 105px;
-                height: 122px;
+                height: 86px;
                 top: 239px;
                 left: 99px;
                 z-index: 3;
@@ -581,7 +581,7 @@
 
             .trigger_imgBox3 {
                 position: absolute;
-                height: 125px;
+                height: 92px;
                 width: 110px;
                 top: 308px;
                 left: 34px;
@@ -589,22 +589,17 @@
             }
 
             .trigger_imgBox4 {
-                position: absolute;
-                width: 192px;
-                height: 192px;
-                top: 481px;
-                left: 200px;
-                z-index: 5;
-
+                width: 130px;
+                top: 318px;
+                left: 136px;
+                height: 94px;
             }
 
             .trigger_imgBox5 {
-                position: absolute;
-                width: 166px;
-                height: 355px;
-                top: 520px;
-                left: 827px;
-                z-index: 1;
+                height: 130px;
+                top: 340px;
+                left: 546px;
+                width: 130px;
             }
 
             .trigger_imgBox6 {
@@ -634,27 +629,21 @@
             }
 
             .trigger_imgBox9 {
-                position: absolute;
-                width: 192px;
-                height: 122px;
-                top: 420px;
-                left: 200px;
-                z-index: 4;
-                display: none;
+                width: 105px;
+                height: 74px;
+                top: 283px;
+                left: 153px;
             }
 
             .trigger_imgBox10 {
-                position: absolute;
-                width: 84px;
-                height: 79px;
-                top: 526px;
-                left: 865px;
-                z-index: 0;
-                display: none;
+                width: 76px;
+                height: 69px;
+                top: 339px;
+                left: 571px;
             }
 
             .page_3_banner .banner_decorationBox {
-                width: 433px;
+                width: 70;
                 height: 100px;
             }
         }
@@ -673,7 +662,7 @@
             }
 
             .page_3_banner .banner_decorationBox {
-                width: 297px;
+                width: 70%;
                 height: 44.09px;
                 top: 119px;
 
@@ -770,6 +759,7 @@
             .guide_titleBox::after {
                 width: 55%;
             }
+
             /* .guide_titleBox::after {
                 content: "";
                 position: absolute;
@@ -863,7 +853,7 @@
             <div class="nav_logo"></div>
         </a>
         <div class="nav_btnGroup">
-  
+
             <div class="nav_btn_about nav_btn_space nav_btn ">
                 <a href="./index.html">關於安妮公主</a>
             </div>
@@ -909,13 +899,13 @@
                         <a href="./pancake-index.html" class="changeSite1 ">鬆餅小屋</a>
                     </li>
                     <li class="diyPage">
-                        <a href="./diy-index.html" class="changeSite2 ">手作diy</a>
+                        <a href="./diy-index.html" class="changeSite2 ">手作DIY</a>
                     </li>
                     <li class="princessPage">
                         <a href="./princess-index.html" class="changeSite3 ">公主故事屋</a>
                     </li>
                 </ul>
-        
+
             </div>
             <div class="nav_btn_eat nav_btn_space mobile_nav_btn mobile_afterSite">
                 <a href="./eat-index.html">主廚上菜</a>
@@ -1135,15 +1125,15 @@
                 </div>
                 <div class=" footer_iconGroupBox">
                     <div class="footer_iconGroup">
-                        <a href="https://zh-tw.facebook.com/annies0425931567"><img
-                                src="./素材/07-icon與logo/FB_icon.png" alt="" class="footer_fbIcon" title="FB"></a>
+                        <a href="https://zh-tw.facebook.com/annies0425931567"><img src="./素材/07-icon與logo/FB_icon.png"
+                                alt="" class="footer_fbIcon" title="FB"></a>
                         <a href="https://page.line.me/hif9867v"><img src="./素材/07-icon與logo/Line_icon.png" alt=""
                                 class="footer_lineIcon" title="Line"></a>
                         <a href="https://www.instagram.com/explore/locations/246263666/"><img
                                 src="./素材/07-icon與logo/IG_icon.png" alt="" class="footer_igIcon" title="IG">
                         </a>
                         <div class="footer_gmailIcon">
-                        <img src="./素材/07-icon與logo/Gmail_icon.png" alt="">
+                            <img src="./素材/07-icon與logo/Gmail_icon.png" alt="">
                         </div>
                     </div>
                 </div>
