--- a/GroupProject-Annie's garden/FrontEnd/princess-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/princess-index.html
@@ -55,7 +55,7 @@
         }
 
         .extraPage_princess_banner .banner_decorationBox {
-            width: 933px;
+            width: 70%;
             height: 138px;
             background-color: rgba(255, 255, 255, 0.63);
             /* transform: translate(988px,319px); */
@@ -756,8 +756,7 @@
 
 
         @media (max-width:1100px) {
-            .extraPage_princess_banner .banner_decorationBox {
-                width: 433px;
+            .extraPage_princess_banner .banner_decorationBox {    
                 height: 100px;
             }
 
@@ -843,8 +842,7 @@
                 height: 248px;
             }
 
-            .extraPage_princess_banner .banner_decorationBox {
-                width: 297px;
+            .extraPage_princess_banner .banner_decorationBox {   
                 height: 44.09px;
                 top: 119px;
 
@@ -938,7 +936,7 @@
                         <a href="./pancake-index.html" class="changeSite1 ">鬆餅小屋</a>
                     </li>
                     <li class="diyPage">
-                        <a href="./diy-index.html" class="changeSite2 ">手作diy</a>
+                        <a href="./diy-index.html" class="changeSite2 ">手作DIY</a>
                     </li>
                     <li class="princessPage">
                         <a href="./princess-index.html" class="changeSite3 ">公主故事屋</a>
