--- a/GroupProject-Annie's garden/FrontEnd/wedding-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/wedding-index.html
@@ -51,7 +51,7 @@
         }
 
         .page_5_banner .banner_decorationBox {
-            width: 933px;
+            width: 70%;
             height: 138px;
             background-color: rgba(255, 255, 255, 0.63);
             /* transform: translate(988px,319px); */
@@ -321,7 +321,7 @@
         @media (max-width:1000px) {
 
             .page_5_banner .banner_decorationBox {
-                width: 433px;
+                width: 70%;
                 height: 100px;
             }
 
@@ -396,7 +396,7 @@
             }
 
             .page_5_banner .banner_decorationBox {
-                width: 297px;
+                width:70%;
                 height: 44.09px;
                 top: 119px;
 
@@ -513,11 +513,11 @@
             </div>
             <div class="guide_extraPages">
                 <ul>
-                    <li class="pancakePage ">
+                    <li class="pancakePage">
                         <a href="./pancake-index.html" class="changeSite1 ">鬆餅小屋</a>
                     </li>
                     <li class="diyPage">
-                        <a href="./diy-index.html" class="changeSite2 ">手作diy</a>
+                        <a href="./diy-index.html" class="changeSite2 ">手作DIY</a>
                     </li>
                     <li class="princessPage">
                         <a href="./princess-index.html" class="changeSite3 ">公主故事屋</a>
