--- a/GroupProject-Annie's garden/FrontEnd/info-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/info-index.html
@@ -85,7 +85,7 @@
         }
 
         .page_2_banner .banner_decorationBox {
-            width: 933px;
+            width: 70%;
             height: 138px;
             background-color: rgba(255, 255, 255, 0.63);
             /* transform: translate(988px,319px); */
@@ -538,7 +538,7 @@
 
 
             .page_2_banner .banner_decorationBox {
-                width: 433px;
+                width: 70%;
                 height: 100px;
             }
 
@@ -709,7 +709,7 @@
             }
 
             .page_2_banner .banner_decorationBox {
-                width: 297px;
+                width: 70%;
                 height: 44.09px;
                 top: 119px;
 
@@ -1054,7 +1054,7 @@
                         <a href="./pancake-index.html" class="changeSite1 ">鬆餅小屋</a>
                     </li>
                     <li class="diyPage">
-                        <a href="./diy-index.html" class="changeSite2 ">手作diy</a>
+                        <a href="./diy-index.html" class="changeSite2 ">手作DIY</a>
                     </li>
                     <li class="princessPage">
                         <a href="./princess-index.html" class="changeSite3 ">公主故事屋</a>
