--- a/GroupProject-Annie's garden/FrontEnd/talk-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/talk-index.html
@@ -28,7 +28,7 @@
         }
 
         .page_6_banner .banner_decorationBox {
-            width: 933px;
+            width: 70%;
             height: 138px;
             background-color: rgba(255, 255, 255, 0.63);
             /* transform: translate(988px,319px); */
@@ -198,7 +198,7 @@
 
 
             .page_6_banner .banner_decorationBox {
-                width: 433px;
+                width: 70%;
                 height: 100px;
             }
 
@@ -253,7 +253,7 @@
             }
 
             .page_6_banner .banner_decorationBox {
-                width: 297px;
+                width: 70%;
                 height: 44.09px;
                 top: 119px;
             }
@@ -435,7 +435,7 @@
                         <a href="./pancake-index.html" class="changeSite1 ">鬆餅小屋</a>
                     </li>
                     <li class="diyPage">
-                        <a href="./diy-index.html" class="changeSite2 ">手作diy</a>
+                        <a href="./diy-index.html" class="changeSite2 ">手作DIY</a>
                     </li>
                     <li class="princessPage">
                         <a href="./princess-index.html" class="changeSite3 ">公主故事屋</a>
