--- a/GroupProject-Annie's garden/FrontEnd/guide-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/guide-index.html
@@ -727,7 +727,7 @@
             }
 
             .swiper-container {
-                margin: 50px auto 65px;
+                margin: 50px auto 100px;
             }
 
             .swiper-button-prev,
@@ -828,8 +828,6 @@
             .swiper-container {
                 max-width: 250px;
                 height: 125px;
-                margin: 0px auto 65px;
-
             }
 
             .swiper-button-prev,
@@ -942,31 +940,31 @@
 
                 <div class="trigger_imgBox1 triggerBoxs">
                     <a href="./eat-index.html">
-                        <img src="./素材/03-園區導覽/map_icon_restaurant.png" alt="" title="我來測試看看拉哈哈哈哈">
+                        <img src="./素材/03-園區導覽/map_icon_restaurant.png" alt="" >
                     </a>
                     <!-- <div class="trigger_imgBox6 triggerBox Billboard">
                         <img src="./素材/03-園區導覽/告示牌.png" alt="" title="我來測試看看拉哈哈哈哈">
                     </div> -->
                 </div>
                 <div class="trigger_imgBox6 triggerBox Billboard">
-                    <img src="./素材/03-園區導覽/billboard-eat.png" alt="" title="我來測試看看拉哈哈哈哈">
+                    <img src="./素材/03-園區導覽/billboard-eat.png" alt="" >
                 </div>
 
 
                 <div class="trigger_imgBox2 triggerBoxs ">
                     <a href="./diy-index.html">
-                        <img src="./素材/03-園區導覽/map_icon_diy-new.png" alt="" title="diy我來測試看看">
+                        <img src="./素材/03-園區導覽/map_icon_diy-new.png" alt="">
                     </a>
                 </div>
 
                 <div class="trigger_imgBox7 triggerBox Billboard">
-                    <img src="./素材/03-園區導覽/billboard-diy.png" alt="" title="我來測試看看拉哈哈哈哈">
+                    <img src="./素材/03-園區導覽/billboard-diy.png" alt="" >
                 </div>
 
 
                 <div class="trigger_imgBox3 triggerBoxs">
                     <a href="./pancake-index.html">
-                        <img src="./素材/03-園區導覽/map_icon_pancake-new.png" alt="" title="鬆餅 我來測試看看">
+                        <img src="./素材/03-園區導覽/map_icon_pancake-new.png" alt="">
                     </a>
                 </div>
 
