--- a/GroupProject-Annie's garden/FrontEnd/info-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/info-index.html
@@ -814,7 +814,8 @@
 
             .Container8 {
                 padding-top: 74px;
-                margin: 0px auto 25px;
+                margin: 0px auto 100px;
+                height: 337px;
             }
 
             .Container1_img1 {
