--- a/GroupProject-Annie's garden/FrontEnd/guide-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/guide-index.html
@@ -75,7 +75,7 @@
         }
 
         .page_3_banner .banner_decorationBox {
-            width: 70;
+            width: 70%;
             height: 138px;
             background-color: rgba(255, 255, 255, 0.63);
             /* transform: translate(988px,319px); */
@@ -431,7 +431,7 @@
         }
 
         .page_3_imgBox {
-            width: 360px;
+            width: 31%;
             height: 100%;
             background-color: #FCC4E1;
             cursor: pointer;
@@ -535,34 +535,22 @@
                 height: 488px;
             }
 
-
-            /* 
-            .trigger_imgBox2 {
-                top: 243px;
-                left: 98px;
-                width: 109px;
+            .imgBox_t {
+                height: 250px;
             }
 
-            .trigger_imgBox3 {
-                top: 300px;
-                left: 28px;
-                width: 113px;
+            .imgBox_m {
+                height: 250px;
             }
 
-            .trigger_imgBox4 {
-                top: 317px;
-                left: 137px;
-                width: 134px;
+            .imgBox_b {
+                height: 250px;
             }
-            .trigger_imgBox1 {
-            position: absolute;
-            width: 355px;
-            height: 355px;
-            top: -42px;
-            left: 454px;
-            z-index: 2;
 
-        } */
+            .page_3_imgBox {
+                width: 32%;
+            }
+
             .trigger_imgBox1 {
                 width: 241px;
                 height: 241px;
@@ -643,7 +631,6 @@
             }
 
             .page_3_banner .banner_decorationBox {
-                width: 70;
                 height: 100px;
             }
         }
@@ -662,10 +649,8 @@
             }
 
             .page_3_banner .banner_decorationBox {
-                width: 70%;
                 height: 44.09px;
                 top: 119px;
-
             }
 
             .page_3_banner .banner_text {
@@ -707,7 +692,7 @@
                 margin-left: 10px;
             }
 
-            .Link5_space {
+            .Link4_space {
                 margin-right: 10px;
             }
 
@@ -743,7 +728,7 @@
             }
         }
 
-        @media (max-width:576px) {
+        @media (max-width:650px) {
 
             .guide_title {
                 font-size: 23px;
@@ -940,14 +925,14 @@
 
                 <div class="trigger_imgBox1 triggerBoxs">
                     <a href="./eat-index.html">
-                        <img src="./素材/03-園區導覽/map_icon_restaurant.png" alt="" >
+                        <img src="./素材/03-園區導覽/map_icon_restaurant.png" alt="">
                     </a>
                     <!-- <div class="trigger_imgBox6 triggerBox Billboard">
                         <img src="./素材/03-園區導覽/告示牌.png" alt="" title="我來測試看看拉哈哈哈哈">
                     </div> -->
                 </div>
                 <div class="trigger_imgBox6 triggerBox Billboard">
-                    <img src="./素材/03-園區導覽/billboard-eat.png" alt="" >
+                    <img src="./素材/03-園區導覽/billboard-eat.png" alt="">
                 </div>
 
 
@@ -958,7 +943,7 @@
                 </div>
 
                 <div class="trigger_imgBox7 triggerBox Billboard">
-                    <img src="./素材/03-園區導覽/billboard-diy.png" alt="" >
+                    <img src="./素材/03-園區導覽/billboard-diy.png" alt="">
                 </div>
 
 
