--- a/GroupProject-Annie's garden/FrontEnd/wedding-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/wedding-index.html
@@ -74,7 +74,7 @@
 
         .wedding_titleBox {
             width: 444.5px;
-            margin: 100px auto;
+            margin: 100px auto 20px;
             letter-spacing: 3px;
             position: relative;
         }
@@ -113,7 +113,7 @@
         }
 
         .page5_toFooterSpace {
-            margin-bottom: 206.253px;
+            margin-bottom: 200px;
             text-align: center;
             font-size: 23px;
             line-height: 38px;
@@ -122,7 +122,7 @@
 
         .wedding_themeGroup {
             max-width: 1440px;
-            margin: 130.065px auto 118px;
+            margin: 100px auto 100px;
             display: flex;
             justify-content: space-between;
 
@@ -151,7 +151,7 @@
             bottom: 0;
             z-index: -2;
             background-color: #F0ABC9;
-            box-shadow: 3px 3px 5px black;
+            box-shadow: 4px 4px 4px 1px rgba(191, 75, 139, 0.75);
         }
 
 
@@ -326,22 +326,17 @@
             }
 
             .wedding_themeGroup {
-
                 flex-flow: column;
                 align-items: center;
             }
 
             .wedding_theme {
                 width: unset;
-
-
             }
 
             .page5_toFooterSpace {
-
+                margin-bottom: 100px;
                 font-size: 20px;
-
-
             }
         }
 
