--- a/GroupProject-Annie's garden/FrontEnd/info-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/info-index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./template.css">
-    <title>Document</title>
+    <title>園區資訊</title>
     <style>
         img {
             width: 100%;
@@ -23,7 +23,7 @@
         .page_2_decoration1 {
             width: 100%;
             height: 500px;
-            background-color: #E05D97;
+            background-color:  #E25D7F;
             position: absolute;
             top: 1983px;
             z-index: -999;
@@ -32,7 +32,7 @@
         .page_2_decoration2 {
             width: 100%;
             height: 500px;
-            background-color: #E05D97;
+            background-color:  #E25D7F;
             position: absolute;
             top: 4028px;
             z-index: -999;
@@ -41,7 +41,7 @@
         .page_2_decoration3 {
             width: 100%;
             height: 500px;
-            background-color: #E05D97;
+            background-color:  #E25D7F;
             position: absolute;
             top: 2000px;
             z-index: -999;
@@ -51,7 +51,7 @@
         .page_2_decoration4 {
             width: 100%;
             height: 500px;
-            background-color: #E05D97;
+            background-color:  #E25D7F;
             position: absolute;
             top: 4040px;
             z-index: -999;
@@ -61,7 +61,7 @@
         .page_2_decoration5 {
             width: 100%;
             height: 500px;
-            background-color: #E05D97;
+            background-color:  #E25D7F;
             position: absolute;
             top: 5040px;
             z-index: -999;
@@ -85,7 +85,7 @@
         }
 
         .page_2_banner .banner_decorationBox {
-            width: 70%;
+            width: 60%;
             height: 138px;
             background-color: rgba(255, 255, 255, 0.63);
             /* transform: translate(988px,319px); */
