--- a/GroupProject-Annie's garden/FrontEnd/talk-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/talk-index.html
@@ -12,12 +12,12 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./template.css">
-    <title>Document</title>
+    <title>安妮悄悄話</title>
     <style>
         .page_6_banner {
             width: 100%;
             height: 760px;
-            background-image: url("./素材/06-安妮悄悄話/contact_us_banner-new.jpg");
+            background-image: url("./素材/06-安妮悄悄話/contact_us_banner.jpg");
             background-position: 50% 10%;
             background-size: cover;
             background-repeat: no-repeat;
@@ -28,7 +28,7 @@
         }
 
         .page_6_banner .banner_decorationBox {
-            width: 70%;
+            width: 60%;
             height: 138px;
             background-color: rgba(255, 255, 255, 0.63);
             /* transform: translate(988px,319px); */
@@ -98,7 +98,9 @@
             position: relative;
         }
 
-
+        .gooleMapbox {
+            border-radius: 50px;
+        }
 
         iframe {
             border-radius: 50px;
