--- a/GroupProject-Annie's garden/FrontEnd/wedding-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/wedding-index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./template.css">
-    <title>Document</title>
+    <title>見證幸福</title>
     <style>
         .mobile_swiper {
             display: none;
@@ -51,7 +51,7 @@
         }
 
         .page_5_banner .banner_decorationBox {
-            width: 70%;
+            width: 60%;
             height: 138px;
             background-color: rgba(255, 255, 255, 0.63);
             /* transform: translate(988px,319px); */
