--- a/GroupProject-Annie's garden/FrontEnd/pancake-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/pancake-index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>鬆餅小屋</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
@@ -55,7 +55,7 @@
         }
 
         .page_pancake_banner .banner_decorationBox {
-            width: 70%;
+            width: 60%;
             height: 138px;
             background-color: rgba(255, 255, 255, 0.63);
             /* transform: translate(988px,319px); */
