--- a/GroupProject-Annie's garden/FrontEnd/princess-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/princess-index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./template.css">
-    <title>Document</title>
+    <title>公主故事屋</title>
     <style>
         img {
             width: 100%;
@@ -55,7 +55,7 @@
         }
 
         .extraPage_princess_banner .banner_decorationBox {
-            width: 70%;
+            width: 60%;
             height: 138px;
             background-color: rgba(255, 255, 255, 0.63);
             /* transform: translate(988px,319px); */
