--- a/GroupProject-Annie's garden/FrontEnd/info-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/info-index.html
@@ -1344,6 +1344,9 @@
         AOS.init();
     </script>
     <script>
+
+        // 點文字連結到各目標位置//
+        
         var anchor = document.querySelectorAll(".anchor")
         var link = document.querySelectorAll(".link")
         console.log(anchor);
@@ -1364,56 +1367,6 @@
         }
 
 
-
-
-        // $(".Link1").on("click", function () {
-        //             $("html, body").animate({
-        //                 scrollTop: $(".anchor7").offset().top
-        //             }, { duration: 5000, easing: "swing" });
-
-        //         })
-
-
-
-    //     $(document).ready(function() {
-    // $(".Link1").click(function() {
-    // $("html, body").animate({
-    // scrollTop: $(".anchor1").offset().top }, {duration: 1000,easing: "swing"});
-    // return false;
-    // });
-    // $(".Link2").click(function() {
-    // $("html, body").animate({
-    // scrollTop: $(".anchor2").offset().top }, {duration: 1000,easing: "swing"});
-    // return false;
-    // });
-    // $(".Link3").click(function() {
-    // $("html, body").animate({
-    // scrollTop: $(".anchor3").offset().top }, {duration: 1000,easing: "swing"});
-    // return false;
-    // });
-    // $(".Link1").click(function() {
-    // $("html, body").animate({
-    // scrollTop: $(".anchor1").offset().top }, {duration: 1000,easing: "swing"});
-    // return false;
-    // });
-    // $(".Link2").click(function() {
-    // $("html, body").animate({
-    // scrollTop: $(".anchor2").offset().top }, {duration: 1000,easing: "swing"});
-    // return false;
-    // });
-    // $(".Link3").click(function() {
-    // $("html, body").animate({
-    // scrollTop: $(".anchor3").offset().top }, {duration: 1000,easing: "swing"});
-    // return false;
-    // });
-
-    // $(".Link1").click(function() {
-    // $("html, body").animate({
-    // scrollTop: $(".anchor1").offset().top }, {duration: 1000,easing: "swing"});
-    // return false;
-    // });
-
-    // });
     </script>
 
     <!-- ////貓探頭//// -->
@@ -1437,25 +1390,6 @@
     </script>
 
 
-    <!-- <script >
-    $(document).ready(function() {
-    $("#Container1").click(function() {
-    $("html, body").animate({
-    scrollTop: $(".Container1").offset().top }, {duration: 500,easing: "swing"});
-    return false;
-    });
-    $("#div2Link").click(function() {
-    $("html, body").animate({
-    scrollTop: $("#div2").offset().top }, {duration: 500,easing: "swing"});
-    return false;
-    });
-    $("#div3Link").click(function() {
-    $("html, body").animate({
-    scrollTop: $("#div3").offset().top }, {duration: 500,easing: "swing"});
-    return false;
-    });
-    });
-    </script> -->
 </body>
 
 </html>
